[project]
name = "libram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.133.0",
    "fastmcp>=3.2.4",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.1",
    "requests>=2.0",
    "sqlalchemy>=1.4",
]
